--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,12 +7,27 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo_blague_raciste"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/logo_blague_raciste"
         android:supportsRtl="true"
         android:theme="@style/Theme.BlagueRaciste"
         tools:targetApi="31">
+        <activity
+            android:name=".AddBlague"
+            android:exported="false" />
+        <activity
+            android:name=".BlaguesActivity"
+            android:exported="false"
+            android:label="@string/title_activity_blagues"
+            android:theme="@style/Theme.BlagueRaciste.NoActionBar" />
+        <activity
+            android:name=".LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.login.LoginActivity"
+            android:exported="false"
+            android:label="@string/title_activity_login" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
